--- a/dashboard/templates/languages/language_list.html
+++ b/dashboard/templates/languages/language_list.html
@@ -348,10 +348,12 @@
         Learn more about this
         <a href="#">on the documentation</a>.
       </p>
+      {% if user.is_staff %}
       <div class="blank-slate-pf-main-action">
         <a class="btn btn-primary btn-lg" href="{% url 'language-new' %}">
           <i class="pficon pficon-add-circle-o"></i> Add language </a>
       </div>
+      {% endif %}
     </div>
   </div>
 </div>
