--- a/dashboard/templates/packages/_tabular_form.html
+++ b/dashboard/templates/packages/_tabular_form.html
@@ -6,7 +6,7 @@
 <div class="panel panel-default panel-border-ts">
   <div class="panel-heading">
     <h3 class="panel-title">Statistics</h3>
-    <span class="text-muted">Stats coming from Upstream has AliceBlue background color whereas Downstream has Ivory color, and its transparent for Translation Platforms.</span>
+    <span class="text-info">Stats coming from Upstream has AliceBlue background color whereas Downstream has Ivory color, and its transparent for Translation Platforms.</span>
   </div>
   <table class="table table-bordered table-hover">
       <thead>
