--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -47,7 +47,7 @@
                 <a href="#" id="filter-products">Products</a>
               </li>
               <li>
-                <a href="#" id="filter-health">Health</a>
+                <a href="#" id="filter-health">Mapping</a>
               </li>
             </ul>
           </div>
