--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -13,12 +13,12 @@
     <div class="card-pf card-pf-utilization" id="card-packages-summary">
       <div class="card-pf-heading">
         <h2 class="card-pf-title">Predefined Jobs
-        <span class="pull-right">
+        <small>
             {% if jobs_count > 0 and job_last_ran_on %}
-                <h5 class="text-muted">Last successful job ran on <span class="text-info">{{ job_last_ran_on }}</span>
-                    of type <span class="text-info">{{ job_last_ran_type }}</span>.</h5>
+                <span class="text-muted">Last successful job ran on <span class="text-info">{{ job_last_ran_on }}</span>
+                    of type <span class="text-info">{{ job_last_ran_type }}</span>.</span>
             {% endif %}
-        </span></h2>
+        </small></h2>
       </div>
       <div class="card-pf-body">
 
