--- a/dashboard/templates/releases/_workload_detailed.html
+++ b/dashboard/templates/releases/_workload_detailed.html
@@ -1,6 +1,6 @@
 <div class="panel-heading">
   <h3 class="panel-title"></h3>
-  <span class='text-muted'>Percentage denotes translations completed for a language across packages</span>
+  <span class='text-info'>Percentage denotes translations completed for a language across packages</span>
 </div>
 <table class="table table-bordered table-hover">
   <thead>
