--- a/dashboard/templates/languages/language_list.html
+++ b/dashboard/templates/languages/language_list.html
@@ -36,7 +36,7 @@
     <div class="card-pf card-pf-accented card-pf-aggregate-status" id="card-language-aliases">
       <h2 class="card-pf-title">
         <span class="fa fa-shield"></span>
-        <span class="card-pf-aggregate-status-count">{{ language_sets|length }}</span> Language sets
+        <span class="card-pf-aggregate-status-count">{{ language_sets|length }}</span> Language Sets
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
@@ -60,7 +60,7 @@
         <h3 class="panel-title">Language Sets
             {% if user.is_staff %}
             <a class="pull-right btn btn-default btn-xs" id="button-add-language-set" type="button" href="{% url 'language-set-new' %}">
-              <span class="pficon pficon-add-circle-o"></span> Add language set</a>
+              <span class="pficon pficon-add-circle-o"></span> Add Language Set</a>
             {% endif %}
         </h3>
       </div>
@@ -72,12 +72,12 @@
           <ul class="dropdown-menu" aria-labelledby="dropdownkebab-{{ langset.lang_set_slug }}">
             <li>
               <!-- TODO: find a better way to call applyFilter() -->
-              <a href="#" onClick="applyFilter($('#table-languages').DataTable(), 4, 'Sets', '{{ langset.lang_set_slug }}')">Filter languages</a>
+              <a href="#" onClick="applyFilter($('#table-languages').DataTable(), 4, 'Sets', '{{ langset.lang_set_slug }}')">Filter Languages</a>
             </li>
             {% if user.is_staff %}
             <li role="separator" class="divider"></li>
             <li>
-              <a href="{% url 'language-set-update' langset.lang_set_slug %}">Edit language set</a>
+              <a href="{% url 'language-set-update' langset.lang_set_slug %}">Edit Language Set</a>
             </li>
             {% endif %}
           </ul>
@@ -99,7 +99,7 @@
           </p>
           <div class="blank-slate-pf-main-action">
             <a class="btn btn-primary btn-lg" href="{% url 'language-set-new' %}">
-              <i class="pficon pficon-add-circle-o"></i> Add language set</a>
+              <i class="pficon pficon-add-circle-o"></i> Add Language Set</a>
           </div>
         </div>
         {% endfor %}
@@ -151,7 +151,7 @@
           {% if user.is_staff %}
           <div class="form-group">
             <a class="btn btn-default" type="button" id="button-add-language" href="{% url 'language-new' %}">
-              <i class="pficon pficon-add-circle-o"></i> Add language</a>
+              <i class="pficon pficon-add-circle-o"></i> Add Language</a>
           </div>
           {% endif %}
           <div class="toolbar-pf-action-right">
@@ -351,7 +351,7 @@
       {% if user.is_staff %}
       <div class="blank-slate-pf-main-action">
         <a class="btn btn-primary btn-lg" href="{% url 'language-new' %}">
-          <i class="pficon pficon-add-circle-o"></i> Add language </a>
+          <i class="pficon pficon-add-circle-o"></i> Add Language </a>
       </div>
       {% endif %}
     </div>
