--- a/dashboard/templates/summary.html
+++ b/dashboard/templates/summary.html
@@ -53,7 +53,7 @@
   <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
-        <a href="{% url 'jobs-logs' %}">
+        <a href="{% url 'jobs-yml-based' %}">
           <span class="fa fa-bolt"></span>
           <span class="card-pf-aggregate-status-count">{{ jobs_len }}</span> Jobs
         </a>
