--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -117,7 +117,7 @@
                 <h4>Is {{ app_name }} project opensource? Where we have docs written?</h4>
                 <span class="text-muted">Yes. Source is available at <a href="https://github.com/transtats" target="_blank">GitHub</a></span>. Projects website is <a href="http://transtats.org/" target="_blank">transtats.org</a> and point your browser to <a href="http://docs.transtats.org/" target="_blank">docs.transtats.org</a> for docs.
                 <h4>Which translation platforms and build systems are currently supported?</h4>
-                <span class="text-muted">{{ app_name }} supports <a href="https://l10n.gnome.org/" target="_blank">DamnedLies</a> and <a href="http://zanata.org" target="_blank">Zanata</a>. {{ app_name }} can talk to <a href="https://koji.fedoraproject.org/koji/" target="_blank">koji</a> build system.</span>
+                <span class="text-muted">{{ app_name }} supports <a href="https://l10n.gnome.org/" target="_blank">DamnedLies</a>, <a href="https://www.transifex.com/" target="_blank">Transifex</a> and <a href="http://zanata.org" target="_blank">Zanata</a>. {{ app_name }} can talk to <a href="https://koji.fedoraproject.org/koji/" target="_blank">koji</a> build system.</span>
                 <h4>What is branch mapping? And why is it important?</h4>
                 <span class="text-muted">Every package has its own branch mapping. This establishes mapping between:
                     <br/><mark>{{ app_name }} <b>release_branch</b> :: translation platform <b>project_version</b> :: build system <b>build_tag</b></mark><br/>On the basis of this, translation differences/gaps are calculated/located.</span>
