improved how-to

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -76,7 +76,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdown-help">
             <li>
-              <a href="{% url 'howto' %}">Quick Start</a>
+              <a href="{% url 'howto' %}">Quick Start &amp; FAQs</a>
             </li>
             <li>
               <a href="/api-docs" target="_blank">API Documentation</a>
@@ -260,7 +260,7 @@
           <ul class="list-group">
             <li class="list-group-item">
               <a href="{% url 'howto' %}">
-                <span class="list-group-item-value">Quick Start</span>
+                <span class="list-group-item-value">Quick Start &amp; FAQs</span>
               </a>
             </li>
             <li class="list-group-item">
