--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <img src="" alt="{{ app_name }} logo">
+          <!--<img src="" alt="{{ app_name }} logo">-->
         </div>
       </div>
     </div>
