--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -40,7 +40,7 @@
             </span>
         </p>
         <hr/>
-        <div>
+        <div class="panel-body">
             <h4><span class="fa fa-clock-o" aria-hidden="true"></span>
                 <span>
                 {% if log.job_start_time %}<span class="text-info">{{ log.job_start_time|date }}</span> - started at
