--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -38,7 +38,7 @@
                 <a href="#" id="filter-packages">Package</a>
               </li>
               <li>
-                <a href="#" id="filter-upstream">Upstream</a>
+                <a href="#" id="filter-upstream">Upstream Repository</a>
               </li>
               <li>
                 <a href="#" id="filter-platforms">Translation Platform</a>
@@ -123,7 +123,7 @@
   <thead>
     <tr>
       <th>Package</th>
-      <th>Upstream</th>
+      <th>Upstream Repository</th>
       <th>Translation Platform</th>
       <th>Products</th>
       {% if user.is_staff %}
