--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -73,8 +73,7 @@
                                     <p class="list-group-item-text">
                                         <strong>{{ datetime|truncatechars:22 }}&nbsp;&nbsp;&nbsp;</strong>
                                         <span class="text-muted">
-                                            <pre style="background:#212121;color:white;max-height:400px;overflow:scroll !important;">
-                                                {{ event|pprint }}</pre>
+                                            <pre style="background:#212121;color:white;max-height:400px;overflow:scroll !important;">{{ event.strip|pprint }}</pre>
                                         </span>
                                     </p>
                                 {% endfor %}
