--- a/dashboard/templates/jobs/logs.html
+++ b/dashboard/templates/jobs/logs.html
@@ -35,11 +35,11 @@
                         {% if log.job_end_time %} and completed at <strong>{{ log.job_end_time|time:"H:i:s" }}</strong>
                         &nbsp;&nbsp;<em>({{ log.duration|floatformat:"0" }} seconds)</em>{% endif %}</span>
                         {% if log.job_visible_on_url %}
-                            <span class="pull-right btn btn-default"><a href="{% url 'log-detail' log.job_uuid %}">Job Details</a>&nbsp;
+                            <span class="pull-right btn btn-default"><a href="{% url 'log-detail' log.job_uuid %}" style="text-decoration: none;">Job Details</a>&nbsp;
                             <span class="fa fa-angle-right"></span></span>
                         {% endif %}
                     </p>
-                    <hr/>
+                    <hr/><h3>Tasks</h3>
                     <p>
                         <div class="list-group">
                             {% for task, details in log.job_log_json.items %}
